# o3de-playground

./: .dockerignore  .gitignore  AGENTS.md  README.md  REQUIREMENTS.md
Project/: CMakeLists.txt  game.cfg  project.json
Project/Assets/Obstacles/: Cylinder.prefab
Project/Assets/Robots/SimpleBot/: SimpleBot.prefab
Project/Assets/SpawnPoints/: SpawnPoints.prefab
Project/Gem/: CMakeLists.txt  enabled_gems.cmake  gem.json  playground_files.cmake  playground_shared_files.cmake
Project/Gem/Include/Playground/: PlaygroundBus.h
Project/Gem/Platform/Common/Clang/: exceptions_clang.cmake
Project/Gem/Platform/Linux/: PAL_linux.cmake
Project/Gem/Source/: PlaygroundModule.cpp  PlaygroundSystemComponent.cpp  PlaygroundSystemComponent.h
Project/Levels/NavTest/: NavTest.prefab
Project/Registry/: autoexec.game.setreg  physxsystemconfiguration.setreg
Project/Scripts/: ObstacleSpawner.lua
docker/: .dockerignore  Dockerfile  README.md
docs/: turtlebot3-simulation-interfaces-research.md
ros2_ws/src/playground_nav/: package.xml  setup.cfg  setup.py
ros2_ws/src/playground_nav/launch/: navigation.launch.py  slam.launch.py
ros2_ws/src/playground_nav/launch/config/: config.rviz  navigation_params.yaml  slam_params.yaml
scripts/: build.sh  cache-o3de-deb.sh  run.sh
tools/o3de_sim_importer/: README.md  __init__.py  common.py  generate_prefab.py  prepare_robot.py  prepare_world.py  validate_import.py
